# Statground_Data_NAVER_Book

./: Cargo.toml  README.md  README_GO_CONVERSION.md  README_RUST_CONVERSION.md  batch_aladin_publisher_seed.py  batch_raw_naver_stats.py  collect.py  collect_manual.py  go.mod  optimize_raw_naver_random_partition.py
.github/workflows/: .github_workflows_naver_book_author.yml  .github_workflows_naver_book_keyword.yml  .github_workflows_naver_book_publisher.yml  book_cdn_export.yml  naver_book.yml  naver_book_aladin_publisher_seed.yml  naver_book_author.yml  naver_book_collect_all.yml  naver_book_keyword.yml  naver_book_manual.yml  naver_book_publisher.yml  naver_book_unicode_random.yml  raw_naver_stats_hourly.yml  (+1 more)
clickhouse_sql/: 01_create_data_book_naver_on_cluster.sql  02_migrate_old_statground_book.sql  02b_migrate_old_statground_book_remote_template.sql  03_verify_data_book_naver.sql  04_hotfix_mv_datetime64_created_at.sql  05_migrate_old_book_extended_local.sql  05b_migrate_old_book_extended_remote_template.sql  06_review_old_object_coverage.sql  07_disable_old_data_book_kafka_objects.sql  08_copy_data_book_to_data_book_naver_if_v3_exists.sql  09_rebuild_data_book_naver_mart_from_raw.sql  10_disable_old_data_prediction_book_kafka_objects.sql  11_copy_data_prediction_book_to_data_book_naver_if_v4_exists.sql  12_create_service_recent_read_model.sql  README.md
scripts/: ensure_cdn_book_repo.py  publish_book_cdn.sh
src/: charts.rs  clickhouse_http.rs  env.rs  lib.rs  naver.rs  raw_naver.rs  stats.rs  term_extract.rs  time_helpers.rs
stats/: raw_naver_stats.md
(+35 files in other folders)
