[package]
name = "statground-naver-book"
version = "0.1.0"
edition = "2021"
description = "Rust collectors and stats generators for NAVER Book -> ClickHouse workflows"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
once_cell = "1"
plotters = "0.3"
rand = "0.8"
rayon = "1"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls-tls"] }
scraper = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
